@@ -554,6 +554,12 @@
     <None Include="resources\cog.ico">
       <Filter>Resources</Filter>
     </None>
+    <None Include="resources\application_go.ico">
+      <Filter>Resources</Filter>
+    </None>
+    <None Include="resources\cog_go.ico">
+      <Filter>Resources</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ProcessHacker.rc">
